<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#ff3eaff9"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="#ffffffff"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/registro_title"
            android:textColor="#ff3eaff9"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/userNameLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/userLogin_title"
            android:textColor="#ff3eaff9"
            android:textSize="24sp" />


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_title"
            android:padding="16dp" />

        <EditText
            android:id="@+id/amontInitial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount_initial_title"
            android:inputType="numberDecimal"
            android:padding="16dp" />

        <EditText
            android:id="@+id/payMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pay_month_title"
            android:inputType="numberDecimal"
            android:padding="16dp" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#ff3eaff9"
            android:text="@string/button_save"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>